# amnesia-fc-isolation

./: .gitignore  Cargo.toml  README.md  cargo.toml  config.toml  package.json  tailwind.config.ts
src/: _main.rs  app.tsx  archive.rs  config.rs  fs.rs  main.rs  styles.css  utils.rs  xml.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: archive.rs  config.rs  handlers.rs  main.rs  utils.rs  xml.rs
