[package]
name = "rust-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked-hash-map = "0.5.6"
pathdiff = "0.2.1"
serde = "1.0.164"
toml = "0.7.4"
unrar = "0.4.4"
xml-rs = "0.8.4"
zip = "0.6.3"
